--- a/build.gradle
+++ b/build.gradle
@@ -32,12 +32,12 @@ task clean(type: Delete) {
 ext {
 
     android = [
-            compileSdkVersion       : 25,
-            buildToolsVersion       : "25.0.3",
-            minSdkVersion           : 15,
-            targetSdkVersion        : 25,
-            versionCode             : 125,
-            versionName             : "2.1.0"
+            compileSdkVersion: 25,
+            buildToolsVersion: "25.0.3",
+            minSdkVersion    : 15,
+            targetSdkVersion : 25,
+            versionCode      : 125,
+            versionName      : "2.1.0"
     ]
 
     version = [
@@ -46,7 +46,7 @@ ext {
             dagger2SdkVersion       : "2.10",
             butterknifeSdkVersion   : "8.6.0",
             rxlifecycleSdkVersion   : "1.0",
-            rxlifecycle2SdkVersion   : "2.0.1",
+            rxlifecycle2SdkVersion  : "2.0.1",
             espressoSdkVersion      : "2.2.2",
             canarySdkVersion        : "1.5.1"
     ]
@@ -59,6 +59,8 @@ ext {
             "cardview-v7"              : "com.android.support:cardview-v7:${version["androidSupportSdkVersion"]}",
             "annotations"              : "com.android.support:support-annotations:${version["androidSupportSdkVersion"]}",
             "recyclerview-v7"          : "com.android.support:recyclerview-v7:${version["androidSupportSdkVersion"]}",
+            "calendarview"             : 'com.prolificinteractive:material-calendarview:1.4.3',
+            "constraint-layout"             : 'com.android.support.constraint:constraint-layout:1.0.2',
 
             //network
             "retrofit"                 : "com.squareup.retrofit2:retrofit:${version["retrofitSdkVersion"]}",
@@ -93,13 +95,13 @@ ext {
             "rxerrorhandler"           : "me.jessyan:rxerrorhandler:1.0.1",
 
             //rx2
-            "rxandroid2"                : "io.reactivex.rxjava2:rxandroid:2.0.1",
-            "rxjava2"                   : "io.reactivex.rxjava2:rxjava:2.1.0",
-            "rxlifecycle2"              : "com.trello.rxlifecycle2:rxlifecycle:${version["rxlifecycle2SdkVersion"]}",
-            "rxlifecycle2-components"   : "com.trello.rxlifecycle2:rxlifecycle-components:${version["rxlifecycle2SdkVersion"]}",
-            "rxcache2"                  : "com.github.VictorAlbertos.RxCache:runtime:1.8.0-2.x",
-            "rxpermissions2"            : "com.tbruyelle.rxpermissions2:rxpermissions:0.9.4@aar",
-            "rxerrorhandler2"           : "me.jessyan:rxerrorhandler:2.0.2",
+            "rxandroid2"               : "io.reactivex.rxjava2:rxandroid:2.0.1",
+            "rxjava2"                  : "io.reactivex.rxjava2:rxjava:2.1.0",
+            "rxlifecycle2"             : "com.trello.rxlifecycle2:rxlifecycle:${version["rxlifecycle2SdkVersion"]}",
+            "rxlifecycle2-components"  : "com.trello.rxlifecycle2:rxlifecycle-components:${version["rxlifecycle2SdkVersion"]}",
+            "rxcache2"                 : "com.github.VictorAlbertos.RxCache:runtime:1.8.0-2.x",
+            "rxpermissions2"           : "com.tbruyelle.rxpermissions2:rxpermissions:0.9.4@aar",
+            "rxerrorhandler2"          : "me.jessyan:rxerrorhandler:2.0.2",
 
             //tools
             "dagger2"                  : "com.google.dagger:dagger:${version["dagger2SdkVersion"]}",
