--- a/build.gradle
+++ b/build.gradle
@@ -60,7 +60,8 @@ ext {
             "annotations"              : "com.android.support:support-annotations:${version["androidSupportSdkVersion"]}",
             "recyclerview-v7"          : "com.android.support:recyclerview-v7:${version["androidSupportSdkVersion"]}",
             "calendarview"             : 'com.prolificinteractive:material-calendarview:1.4.3',
-            "constraint-layout"             : 'com.android.support.constraint:constraint-layout:1.0.2',
+            "constraint-layout"        : 'com.android.support.constraint:constraint-layout:1.0.2',
+            "pickerview"               : 'com.contrarywind:Android-PickerView:3.2.5',
 
             //network
             "retrofit"                 : "com.squareup.retrofit2:retrofit:${version["retrofitSdkVersion"]}",
