--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ buildscript {
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
         //lambda
         classpath 'me.tatarka:gradle-retrolambda:3.6.0'
+//        //realm
+//        classpath "io.realm:realm-gradle-plugin:2.0.2"
     }
 }
 
@@ -61,7 +63,7 @@ ext {
             "recyclerview-v7"          : "com.android.support:recyclerview-v7:${version["androidSupportSdkVersion"]}",
             "calendarview"             : 'com.prolificinteractive:material-calendarview:1.4.3',
             "constraint-layout"        : 'com.android.support.constraint:constraint-layout:1.0.2',
-            "pickerview"               : 'com.contrarywind:Android-PickerView:3.2.5',
+            "litepal"                  : 'org.litepal.android:core:1.5.1',
 
             //network
             "retrofit"                 : "com.squareup.retrofit2:retrofit:${version["retrofitSdkVersion"]}",
