--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,10 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+    <uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
+    <uses-permission android:name="com.android.launcher.permission.UNINSTALL_SHORTCUT" />
 
     <application
         android:name="com.yuqinyidev.android.framework.base.BaseApplication"
@@ -53,14 +57,19 @@
 
         <activity android:name=".demo.mvp.ui.activity.UserActivity" />
         <activity android:name=".main.mvp.ui.activity.MainMenuActivity" />
-        <activity android:name=".trainingdiary.mvp.ui.activity.TrainingDiaryActivity" />
+        <activity
+            android:name=".trainingdiary.mvp.ui.activity.TrainingDiaryActivity"
+            android:exported="true" />
         <activity android:name=".trainingdiary.mvp.ui.activity.SaveTrainingDiaryActivity" />
 
-        <activity android:name=".weather.mvp.ui.activity.WeatherMainActivity" />
+        <activity
+            android:name=".weather.mvp.ui.activity.WeatherMainActivity"
+            android:exported="true" />
         <activity android:name=".weather.mvp.ui.activity.WeatherActivity" />
 
         <activity
             android:name=".kanbook.mvp.ui.activity.KBMainActivity"
+            android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
 
@@ -86,6 +95,7 @@
 
         <activity
             android:name=".memorandum.mvp.ui.activity.MR_MemorandumMain"
+            android:exported="true"
             android:label="@string/app_name"
             android:screenOrientation="portrait" />
 
