--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,50 +48,57 @@
             android:value="ConfigModule" />
 
         <!-- Activity -->
-        <activity android:name=".splash.mvp.ui.activity.SplashActivity">
+        <activity
+            android:name=".splash.mvp.ui.activity.SplashActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <activity android:name=".demo.mvp.ui.activity.UserActivity" />
-        <activity android:name=".main.mvp.ui.activity.MainMenuActivity" />
+        <activity
+            android:name=".demo.mvp.ui.activity.UserActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".main.mvp.ui.activity.MainMenuActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".trainingdiary.mvp.ui.activity.TrainingDiaryActivity"
-            android:exported="true" />
-        <activity android:name=".trainingdiary.mvp.ui.activity.SaveTrainingDiaryActivity" />
+            android:exported="true"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".trainingdiary.mvp.ui.activity.SaveTrainingDiaryActivity"
+            android:screenOrientation="portrait" />
 
         <activity
             android:name=".weather.mvp.ui.activity.WeatherMainActivity"
-            android:exported="true" />
-        <activity android:name=".weather.mvp.ui.activity.WeatherActivity" />
+            android:exported="true"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".weather.mvp.ui.activity.WeatherActivity"
+            android:screenOrientation="portrait" />
 
         <activity
             android:name=".kanbook.mvp.ui.activity.KBMainActivity"
             android:exported="true"
-            android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
+            android:screenOrientation="portrait" />
 
         <activity
             android:name=".kanbook.mvp.ui.activity.KBBookShelfActivity"
-            android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
+            android:screenOrientation="portrait"  />
 
         <activity
             android:name=".kanbook.mvp.ui.activity.KBReadTxtActivity"
-            android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
+            android:screenOrientation="portrait" />
 
         <activity
             android:name=".kanbook.mvp.ui.activity.KBSettingActivity"
-            android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
+            android:screenOrientation="portrait" />
 
         <activity
-            android:name=".kanbook.mvp.ui.activity.KBVirualDialogActivity"
-            android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Dialog" />
+            android:name=".kanbook.mvp.ui.activity.KBVirtualDialogActivity"
+            android:screenOrientation="portrait" />
 
         <activity
             android:name=".memorandum.mvp.ui.activity.MR_MemorandumMain"
